--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<div class="col-lg-2">
 					<div class="logo">
 						<a class="logo_img" href="index.html" title="it-solution">
-							<img src="assets/images/LogoBIC.png" alt="logo">
+							<img src="assets/images/Logo BeInCloud blanco.png" alt="logo">
 						</a>
 						<a class="main_sticky" href="index.html" title="it-solution">
 							<img src="assets/images/LogoBIC.png" alt="logo">
@@ -493,7 +493,7 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-12 text-center">
 					<div class="section-title center-title">
-						<h2>Our Valued Clients</h2>
+						<h2>Some of Our Clients</h2>
 					</div>
 				</div>
 			</div>
