--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<div class="col-lg-2">
 					<div class="logo">
 						<a class="logo_img" href="index.html" title="it-solution">
-							<img src="assets/images/Logo BeInCloud blanco.png" alt="logo">
+							<img src="assets/images/resource/Logo BeInCloud blanco.png" alt="logo">
 						</a>
 						<a class="main_sticky" href="index.html" title="it-solution">
 							<img src="assets/images/LogoBIC.png" alt="logo">
@@ -321,7 +321,7 @@
 			<div class="row align-items-center" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-6">
 					<div class="choose-us-thumb" data-tilt>
-						<img src="assets/images/resource/choose-us-thumb.png" alt="thumb">
+						<img src="assets/images/resource/Untitled design - 1.png" alt="thumb">
 					</div>
 				</div>
 				<div class="col-lg-6">
@@ -493,7 +493,7 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-12 text-center">
 					<div class="section-title center-title">
-						<h2>Some of Our Clients</h2>
+						<h2>Some of Our Clients and Partners</h2>
 					</div>
 				</div>
 			</div>
@@ -554,7 +554,7 @@
 			<div class="row align-items-center" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-6">
 					<div class="choose-us-thumb" data-tilt>
-						<img src="assets/images/resource/choose-us-thumb.png" alt="thumb">
+						<img src="assets/images/resource/Untitled design - 2.png" alt="thumb">
 					</div>
 				</div>
 				<div class="col-lg-6">
@@ -872,7 +872,7 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="about-us-thumb" data-tilt data-cues="slideInUp">
-						<img src="assets/images/resource/about-us-thumb.png" alt="about-us-thumb">
+						<img src="assets/images/resource/Untitled design - 3.png" alt="about-us-thumb">
 					</div>
 					<div class="dark-about-us-button d-none" data-tilt>
 						<img src="assets/images/resource/dark-about-us-thumb.png" alt="dark-about-us-thumb">
