--- a/about.html
+++ b/about.html
@@ -100,10 +100,10 @@
 				<div class="col-lg-2">
 					<div class="logo">
 						<a class="logo_img" href="index.html" title="it-solution">
-							<img src="assets/images/logo2.png" alt="logo">
+							<img src="assets/images/resource/Logo BeInCloud blanco.png" alt="logo">
 						</a>
 						<a class="main_sticky" href="index.html" title="it-solution">
-							<img src="assets/images/logo.png" alt="logo">
+							<img src="assets/images/LogoBIC.png" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -259,9 +259,23 @@
 						<h5>ABOUT US</h5>
 						<h1>We Are Development Expert</h1>
 						<h1>on all IT <span>Solution</span></h1>
-						<p>Quickly incubate functional channels with there multidisciplinary architectures
-							authoritatively fabricate formulate exceptional innovation.</p>
-					</div>
+						<div class="about-text-text">
+						<p>At BeInCloud, we are a team of tech creatives passionate about driving 
+							innovation and digital transformation. With expertise in custom solutions 
+							and professional services, we empower businesses to thrive in the digital 
+							age by embracing cutting-edge technology.</p>
+							
+							<p>Our mission is to help companies increase agility, reduce costs,
+							and maximize performance through cloud services, agile methodologies, 
+							and modern web and app development. Whether it's scaling digital platforms, 
+							optimizing workflows, or delivering tailored cloud solutions, we stand by our
+							clients every step of the way, ensuring they stay ahead in a fast-paced, 
+							ever-evolving market.</p>
+							
+							<p>Join us in shaping the future of technology and driving success with flexible, 
+							innovative, and results-driven solutions.</p>
+						</div>
+                   <!--
 					<div class="about-icon-box">
 						<div class="box-icon">
 							<img src="assets/images/resource/icon.png" alt="icon">
@@ -291,6 +305,7 @@
 							<p>Progressively foster enter systems whereas equity invested web-readin
 								installed expedite virtual networks.</p>
 						</div>
+						-->
 					</div>
 					<div class="about-us-button">
 						<a href="#">Get In Toutch</a>
@@ -298,7 +313,7 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="about-us-thumb" data-tilt>
-						<img src="assets/images/resource/about-us-thumb.png" alt="about-us-thumb">
+						<img src="assets/images/resource/Untitled design - 8.png" alt="about-us-thumb">
 					</div>
 					<div class="dark-about-us-button d-none">
 						<img src="assets/images/resource/dark-about-us-thumb.png" alt="dark-about-us-thumb">
@@ -307,6 +322,7 @@
 			</div>
 		</div>
 	</div>
+	
 
 	<!--==================================================-->
 	<!-- End it solution About Us Section  -->
@@ -434,7 +450,7 @@
 
 	<!--==================================================-->
 	<!-- Start it solution testimonial Section  -->
-	<!--==================================================-->
+	<!--==================================================
 
 	<div class="testimonial-section">
 		<div class="container">
@@ -495,7 +511,7 @@
 
 	<!--==================================================-->
 	<!-- Start it solution brand Section  -->
-	<!--==================================================-->
+	<!--==================================================
 
 	<div class="brand-section">
 		<div class="container">
@@ -559,7 +575,7 @@
 
 	<!--==================================================-->
 	<!-- Start it solution blog Section  -->
-	<!--==================================================-->
+	<!--==================================================
 
 	<div class="blog-section">
 		<div class="container">
@@ -749,12 +765,10 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-logo">
-						 <a href="#"><img src="assets/images/resource/footer-logo.png" alt="bg"></a>
+						 <a href="#"><img src="assets/images/resource/Logo BeInCloud blanco.png" alt="bg"></a>
 					</div>
 					<div class="footer-widget-description">
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing
-							Voluptatibus facerei possimus dignissimos, aliquam
-							nobis eaque? Voluptatem magnam</p>
+						<p>"Shaping the future of business through digital innovation."</p>
 					</div>
 					<div class="footer-social-icon">
 						<ul>
@@ -860,7 +874,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="copyright-description text-center">
-						<p>© 2023 IT-Perch – <span>Dream-IT</span>. All rights reserved.</p>
+						<p>© 2024 BeInCloud – <span>BeInCloud</span>. All rights reserved.</p>
 					</div>
 				</div>
 			</div>
