--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-service-box">
 						<div class="service-icon">
-							<img src="assets/images/resource/service-icon.png" alt="icon">
+							<img src="assets/images/resource/counter-icon2.png" alt="icon">
 						</div>
 						<div class="service-content">
 							<h4>Comprehensive Solutions</h4>
@@ -449,7 +449,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-service-box">
 						<div class="service-icon">
-							<img src="assets/images/resource/service-icon1.png" alt="icon">
+							<img src="assets/images/resource/counter-icon.png" alt="icon">
 						</div>
 						<div class="service-content">
 							<h4>Web Application Development</h4>
@@ -464,7 +464,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-service-box">
 						<div class="service-icon">
-							<img src="assets/images/resource/service-icon2.png" alt="icon">
+							<img src="assets/images/resource/counter-icon3.png" alt="icon">
 						</div>
 						<div class="service-content">
 							<h4>Scaled Agility and Project Management</h4>
@@ -493,7 +493,7 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-12 text-center">
 					<div class="section-title center-title">
-						<h2>Some of Our Clients and Partners</h2>
+						<h2>Some of Our Clients</h2>
 					</div>
 				</div>
 			</div>
@@ -757,8 +757,58 @@
 	<!--==================================================-->
 	<!-- Start it solution counter Section  -->
 	<!--==================================================-->
+	<div class="brand-section">
+		<div class="container">
+			<div class="row" data-cues="slideInUp" data-duration="2000">
+				<div class="col-lg-12 text-center">
+					<div class="section-title center-title">
+						<h2>Some of Our Partners</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row" data-cues="slideInUp" data-duration="2000">
+				<div class="brand-list owl-carousel">
+					<div class="col-lg-3">
+						<div class="single-brand-box">
+							<div class="brand-thumb">
+								<img src="assets/images/resource/brand-thumb.png" alt="thumb">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="single-brand-box">
+							<div class="brand-thumb">
+								<img src="assets/images/resource/brand-thumb1.png" alt="thumb">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="single-brand-box">
+							<div class="brand-thumb">
+								<img src="assets/images/resource/brand-thumb2.png" alt="thumb">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="single-brand-box">
+							<div class="brand-thumb">
+								<img src="assets/images/resource/brand-thumb3.png" alt="thumb">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="single-brand-box">
+							<div class="brand-thumb">
+								<img src="assets/images/resource/brand-thumb4.png" alt="thumb">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-	<div class="counter-section">
+    <!-- <div class="counter-section">
 		<div class="container">
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-3 col-md-6">
@@ -811,7 +861,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 
 	<!--==================================================-->
 	<!-- End it solution counter Section  -->
@@ -833,17 +883,19 @@
 						<h5>ABOUT US</h5>
 						<h1>We Are Development Expert</h1>
 						<h1>on all IT <span>Solution</span></h1>
-						<p>Quickly incubate functional channels with there multidisciplinary architectures
-							authoritatively fabricate formulate exceptional innovation.</p>
+						<p>At BeInCloud, we are a team of tech creatives passionate about driving 
+							innovation and digital transformation. With expertise in custom
+							 solutions and professional services, we empower businesses to 
+							 thrive in the digital age by embracing cutting-edge technology.</p>
 					</div>
 					<div class="about-icon-box">
 						<div class="box-icon">
 							<img src="assets/images/resource/icon.png" alt="icon">
 						</div>
 						<div class="about-text">
-							<h4>Worldwide Services</h4>
-							<p>Progressively foster enter systems whereas equity invested web-readin
-								installed expedite virtual networks.</p>
+							<h4>Global Solutions</h4>
+							<p>We drive seamless global services, ensuring that businesses across the world benefit from our tailored,
+								 innovative IT solutions designed to meet their unique needs.</p>
 						</div>
 					</div>
 					<div class="about-icon-box">
@@ -851,9 +903,9 @@
 							<img src="assets/images/resource/icon1.png" alt="icon">
 						</div>
 						<div class="about-text">
-							<h4>Uniqe Solutions</h4>
-							<p>Progressively foster enter systems whereas equity invested web-readin
-								installed expedite virtual networks.</p>
+							<h4>Innovative Technologies</h4>
+							<p>Empowering your business with cutting-edge solutions that enhance operational efficiency, 
+								leveraging cloud, automation, and agile methodologies for maximum impact..</p>
 						</div>
 					</div>
 					<div class="about-icon-box">
@@ -861,9 +913,10 @@
 							<img src="assets/images/resource/icon2.png" alt="icon">
 						</div>
 						<div class="about-text">
-							<h4>24/7 Free Online Support</h4>
-							<p>Progressively foster enter systems whereas equity invested web-readin
-								installed expedite virtual networks.</p>
+							<h4>24/7 Dedicated Support</h4>
+							<p>Your success is our priority. Enjoy round-the-clock
+								 technical support, ensuring your systems run smoothly with minimal
+								  disruption.</p>
 						</div>
 					</div>
 					<div class="about-us-button">
