--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
 
 	<!--==================================================-->
 	<!-- Start it solution brand Section  -->
-	<!--==================================================-->
+	<!--==================================================
 
 	<div class="brand-section">
 		<div class="container">
@@ -1392,12 +1392,10 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-logo">
-						 <a href="#"><img src="assets/images/resource/footer-logo.png" alt="bg"></a>
+						 <a href="#"><img src="assets/images/resource/Logo BeInCloud blanco.png" alt="bg"></a>
 					</div>
 					<div class="footer-widget-description">
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing
-							Voluptatibus facerei possimus dignissimos, aliquam
-							nobis eaque? Voluptatem magnam</p>
+						<p>"Shaping the future of business through digital innovation."</p>
 					</div>
 					<div class="footer-social-icon">
 						<ul>
@@ -1503,7 +1501,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="copyright-description text-center">
-						<p>© 2023 IT-Perch – <span>Dream-IT</span>. All rights reserved.</p>
+						<p>© 2024 BeInCloud – <span>BeInCloud</span>. All rights reserved.</p>
 					</div>
 				</div>
 			</div>
