WebPage Ajust VS 1

--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@
 						</div>
 						<div class="service-content">
 							<h4>Custom Web Development</h4>
-							<p>Tailor-made websites focused on UX/UI, responsive design, and SEO optimization.</p>
+							<p>Tailor-made websites focused on UX/UI,
+								 responsive design, and SEO optimization.</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -409,7 +410,8 @@
 						</div>
 						<div class="service-content">
 							<h4>Cloud Services Consultancy</h4>
-							<p>Cloud migration, customized architectures, and continuous management on platforms like AWS, Azure, and Google Cloud</p>
+							<p>Cloud migration, customized architectures, 
+								and continuous management on platforms like AWS, Azure, and Google Cloud</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -423,7 +425,8 @@
 						</div>
 						<div class="service-content">
 							<h4>Development Consultancy</h4>
-							<p>Technology advisory, code auditing, and implementation of agile methodologies and DevOps</p>
+							<p>Technology advisory, code auditing, and 
+								implementation of agile methodologies and DevOps</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -439,7 +442,8 @@
 						</div>
 						<div class="service-content">
 							<h4>Comprehensive Solutions</h4>
-							<p>End-to-end consulting and custom technological development, integrating cloud, web, and applications</p>
+							<p>End-to-end consulting and custom technological development,
+								 integrating cloud, web, and applications</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -453,7 +457,8 @@
 						</div>
 						<div class="service-content">
 							<h4>Web Application Development</h4>
-							<p>Scalable full-stack applications with API and external service integration.
+							<p>Scalable full-stack applications with API and 
+								external service integration.
 							</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
@@ -468,7 +473,8 @@
 						</div>
 						<div class="service-content">
 							<h4>Scaled Agility and Project Management</h4>
-							<p>Agile frameworks implementation (SAFe, Scrum, Kanban), agile coaching, and IT project management.</p>
+							<p>Agile frameworks implementation (SAFe, Scrum, Kanban),
+								 agile coaching, and IT project management.</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -1007,7 +1013,7 @@
 
 	<!--==================================================-->
 	<!-- Start it solution testimonial Section  -->
-	<!--==================================================-->
+	<!--==================================================
 
 	<div class="testimonial-section">
 		<div class="container">
@@ -1268,7 +1274,7 @@
 
 	<!--==================================================-->
 	<!-- Start it solution blog Section  -->
-	<!--==================================================-->
+	<!--==================================================
 
 	<div class="blog-section">
 		<div class="container">
