--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>dream-hub - Marketing Agency HTML5 Template</title>
+	<title>BeInCloud - Service</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -100,10 +100,10 @@
 				<div class="col-lg-2">
 					<div class="logo">
 						<a class="logo_img" href="index.html" title="it-solution">
-							<img src="assets/images/logo2.png" alt="logo">
+							<img src="assets/images/resource/Logo BeInCloud blanco.png" alt="logo">
 						</a>
 						<a class="main_sticky" href="index.html" title="it-solution">
-							<img src="assets/images/logo.png" alt="logo">
+							<img src="assets/images/LogoBIC.png" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -226,9 +226,9 @@
 							<h1>Services</h1>
 						</div>
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="inde.html"></a></li>
 							<li>/</li>
-							<li><span>Services</span></li>
+							<li><span></span></li>
 						</ul>
 						
 					</div>
@@ -259,10 +259,11 @@
 						<h1>Solution <span>Services</span></h1>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<!--<div class="col-lg-4">
 					<div class="services-button">
 						<a href="#">View All Services</a>
-					</div>
+					</div>-->
+
 				</div>
 			</div>
 			<div class="row" data-cues="slideInUp" data-duration="2000">
@@ -272,10 +273,9 @@
 							<img src="assets/images/resource/service-icon.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Software Development</h4>
-							<p>At vero eos et accusamus etiusto odio
-								praesentium accusamus etiusto in odio data
-								center for managing database.</p>
+							<h4>Custom Web Development</h4>
+							<p>Tailor-made websites focused on UX/UI,
+								responsive design, and SEO optimization.</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -288,10 +288,10 @@
 							<img src="assets/images/resource/service-icon1.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Digital Marketing</h4>
-							<p>At vero eos et accusamus etiusto odio
-								praesentium accusamus etiusto in odio data
-								center for managing database.</p>
+							<h4>Cloud Services Consultancy</h4>
+							<p>Cloud migration, customized architectures, 
+								and continuous management on platforms like AWS, 
+								Azure, and Google Cloud.</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -304,10 +304,56 @@
 							<img src="assets/images/resource/service-icon2.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Analytic Solutions</h4>
-							<p>At vero eos et accusamus etiusto odio
-								praesentium accusamus etiusto in odio data
-								center for managing database.</p>
+							<h4>Development Consultancy</h4>
+							<p>ATechnology advisory, code auditing, and 
+								implementation of agile methodologies and DevOps.</p>
+							<div class="service-button">
+								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" data-cues="slideInUp" data-duration="2000">
+				<div class="col-lg-4 col-md-6">
+					<div class="single-service-box">
+						<div class="service-icon">
+							<img src="assets/images/resource/counter-icon2.png" alt="icon">
+						</div>
+						<div class="service-content">
+							<h4>Comprehensive Solutions</h4>
+							<p>End-to-end consulting and custom technological development,
+								integrating cloud, web, and applications</p>
+							<div class="service-button">
+								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="single-service-box">
+						<div class="service-icon">
+							<img src="assets/images/resource/counter-icon.png" alt="icon">
+						</div>
+						<div class="service-content">
+							<h4>Web Application Development</h4>
+							<p>Scalable full-stack applications with API and external 
+								service integration.</p>
+							<div class="service-button">
+								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="single-service-box">
+						<div class="service-icon">
+							<img src="assets/images/resource/counter-icon3.png" alt="icon">
+						</div>
+						<div class="service-content">
+							<h4>Scaled Agility and Project Management</h4>
+							<p>Agile frameworks implementation (SAFe, Scrum, Kanban),
+								agile coaching, and IT project management.</p>
 							<div class="service-button">
 								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
@@ -329,7 +375,7 @@
 
 	<!--==================================================-->
 	<!-- Start it solution testimonial Section  -->
-	<!--==================================================-->
+	<!--==================================================
 
 	<div class="testimonial-section">
 		<div class="container">
@@ -376,7 +422,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 
 	<!--==================================================-->
 	<!-- End it solution testimonial Section  -->
@@ -461,12 +507,10 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-logo">
-						 <a href="#"><img src="assets/images/resource/footer-logo.png" alt="bg"></a>
+						 <a href="#"><img src="assets/images/resource/Logo BeInCloud blanco.png" alt="bg"></a>
 					</div>
 					<div class="footer-widget-description">
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing
-							Voluptatibus facerei possimus dignissimos, aliquam
-							nobis eaque? Voluptatem magnam</p>
+						<p>"Shaping the future of business through digital innovation."</p>
 					</div>
 					<div class="footer-social-icon">
 						<ul>
@@ -572,7 +616,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="copyright-description text-center">
-						<p>© 2023 IT-Perch – <span>Dream-IT</span>. All rights reserved.</p>
+						<p>© 2024 BeInCloud – <span>BeInCloud</span>. All rights reserved.</p>
 					</div>
 				</div>
 			</div>
