--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>dream-hub - Marketing Agency HTML5 Template</title>
+	<title>BeInCloud - BeInCloud AboutUs</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -227,9 +227,9 @@
 							<h1>About Us</h1>
 						</div>
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html"></a></li>
 							<li>/</li>
-							<li><span>About Us</span></li>
+							<li><span></span></li>
 						</ul>
 						
 					</div>
