--- a/services-details.html
+++ b/services-details.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>dream-hub - Marketing Agency HTML5 Template</title>
+	<title>BeInCloud - Service-Details</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -100,10 +100,10 @@
 				<div class="col-lg-2">
 					<div class="logo">
 						<a class="logo_img" href="index.html" title="it-solution">
-							<img src="assets/images/logo2.png" alt="logo">
+							<img src="assets/images/resource/Logo BeInCloud blanco.png" alt="logo">
 						</a>
 						<a class="main_sticky" href="index.html" title="it-solution">
-							<img src="assets/images/logo.png" alt="logo">
+							<img src="assets/images/LogoBIC.png" alt="logo">
 						</a>
 					</div>
 				</div>
@@ -226,9 +226,9 @@
 							<h1>Services Details</h1>
 						</div>
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html"></a></li>
 							<li>/</li>
-							<li><span>Services Details</span></li>
+							<li><span></span></li>
 						</ul>
 						
 					</div>
@@ -255,7 +255,7 @@
 				<div class="col-lg-8">
 					 <div class="services-details-box">
 						<div class="services-details-thumb">
-							<img src="assets/images/resource/Service-Details-thumb.png" alt="">
+							<img src="assets/images/resource/Untitled design - 7.png" alt="">
 						</div>
 						<div class="services-details-content">
 							<h2>Celebrating Head Of The Table 2023</h2>
@@ -408,12 +408,10 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-logo">
-						 <a href="#"><img src="assets/images/resource/footer-logo.png" alt="bg"></a>
+						 <a href="#"><img src="assets/images/resource/Logo BeInCloud blanco.png" alt="bg"></a>
 					</div>
 					<div class="footer-widget-description">
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing
-							Voluptatibus facerei possimus dignissimos, aliquam
-							nobis eaque? Voluptatem magnam</p>
+						<p>"Shaping the future of business through digital innovation."</p>
 					</div>
 					<div class="footer-social-icon">
 						<ul>
@@ -519,7 +517,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="copyright-description text-center">
-						<p>© 2023 IT-Perch – <span>Dream-IT</span>. All rights reserved.</p>
+						<p>© 2024 BeInCloud – <span>BeInCloud</span>. All rights reserved.</p>
 					</div>
 				</div>
 			</div>
