--- a/contact-us.html
+++ b/contact-us.html
@@ -68,17 +68,21 @@
 	<!--==================================================-->
 	<!-- Ends Curser Section Here -->
 	<!--==================================================-->
-
-
-
+	<form method="get" action="/search">
+		<div class="form-group">
+			<input type="search" name="search-field" placeholder="Search Here" required>
+			<button type="submit"><i class="fas fa-search"></i></button>
+		</div>
+	</form>
 	<!--==================================================-->
 	<!-- Start Search Popup Area -->
-	<!--==================================================-->
+	<!--==================================================
 	<div class="search-popup">
 		<button class="close-search style-two"><i class="fas fa-times"></i></button>
 		<form method="post" action="#">
 			<div class="form-group">
-				<input type="search" name="search-field" value="" placeholder="Search Here" required="">
+				<input type="search" name="search-field" value="" 
+				placeholder="Search Here" required="">
 				<button type="submit"><i class="fas fa-search"></i></button>
 			</div>
 		</form>
@@ -257,7 +261,7 @@
 						<h1>Get In Touch</h1>
 					</div>
 				</div>
-				<form action="https://formspree.io/f/myyleorq" method="POST">
+				<form action=https://formspree.io/f/xkgnnewk method="POST">
 					<div class="row">
 						<div class="col-lg-6 col-md-6">
 							<div class="form-box">
