--- a/contact-us.html
+++ b/contact-us.html
@@ -133,7 +133,7 @@
 									<li><a href="portfolio-details.html">Portfolio Details</a></li>
 								</ul>
 							</li>-->
-							<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
+							<li><a href="blog.html">Blog <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="blog.html">Blog</a></li>
 									<li><a href="blog-list.html">Blog List</a></li>
@@ -183,12 +183,12 @@
 							<li><a href="services-details.html">Services Details</a></li>
 						</ul>
 					</li>
-					<li><a href="portfolio.html">Portfolio <span><i class="fas fa-plus"></i></span></a>
+					<!--<li><a href="portfolio.html">Portfolio <span><i class="fas fa-plus"></i></span></a>
 						<ul class="sub-menu">
 							<li><a href="portfolio.html">Portfolio</a></li>
 							<li><a href="portfolio-details.html">Portfolio Details</a></li>
 						</ul>
-					</li>
+					</li>-->
 					<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
 						<ul class="sub-menu">
 							<li><a href="blog.html">Blog</a></li>
