--- a/blog-2column.html
+++ b/blog-2column.html
@@ -124,7 +124,7 @@
 									<li><a href="portfolio-details.html">Portfolio Details</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
+							<li><a href="blog.html">Blog <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="blog.html">Blog</a></li>
 									<li><a href="blog-list.html">Blog List</a></li>
