--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>dream-hub - Marketing Agency HTML5 Template</title>
+	<title>BeInCloud</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -124,7 +124,7 @@
 									<li><a href="portfolio-details.html">Portfolio Details</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
+							<li><a href="blog.html">Blog <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="blog.html">Blog</a></li>
 									<li><a href="blog-list.html">Blog List</a></li>
