--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 									<li><a href="services-details.html">Services Details</a></li>
 								</ul>
 							</li>
-							<li><a href="portfolio.html">Portfolio <span><i class="fas fa-plus"></i></span></a>
+							<!--<li><a href="portfolio.html">Portfolio <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="portfolio.html">Portfolio</a></li>
 									<li><a href="portfolio-details.html">Portfolio Details</a></li>
 								</ul>
-							</li>
-							<li><a href="index.html">Blog <span><i class="fas fa-plus"></i></span></a>
+							</li>-->
+							<li><a href="blog.html">Blog <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="blog.html">Blog</a></li>
 									<li><a href="blog-list.html">Blog List</a></li>
@@ -119,7 +119,7 @@
 									<li><a href="blog-details.html">Blog Details</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html">Pages <span><i class="fas fa-plus"></i></span></a>
+							<!--<li><a href="index.html">Pages <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="about.html">About</a></li>
 									<li><a href="services.html">Services</a></li>
@@ -130,7 +130,7 @@
 									<li><a href="pricing.html">pricing</a></li>
 									<li><a href="contact-us.html">Contact Us</a></li>
 								</ul>
-							</li>
+							</li>-->
 							<li><a href="contact-us.html">Contact Us</a></li>
 						</ul>
 						<!-- headerm search button -->
@@ -223,14 +223,14 @@
 									<h1>We offer innovative tech solutions</h1>
 									<h1>To help your business reach the next <span> Level </span></h1>
 									<p>From web development to cloud consulting, we’re here to optimize your performance and reduce costs </p>
-									<div class="hero-button">
+									<!--<div class="hero-button">
 										<div class="section-button">
 											<a href="#">Start Now</a>
 										</div>
 										<div class="section-button up">
 											<a href="#">Contact Us</a>
 										</div>
-									</div>
+									</div>-->
 								</div>
 							</div>
 							<div class="col-lg-5" data-tilt>
