--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="services.html">Services <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
-									<li><a href="services.html">Services</a></li>
+									<!--<li><a href="services.html">Services</a></li>-->
 									<li><a href="services-details.html">Services Details</a></li>
 								</ul>
 							</li>
@@ -355,7 +355,7 @@
 						</div>
 					</div>
 					<div class="choose-us-button">
-						<a href="#">Learn More</a>
+						<a href="about.html">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -383,7 +383,7 @@
 				</div>
 				<div class="col-lg-4">
 					<div class="services-button">
-						<a href="#">View All Services</a>
+						<a href="services.html">View All Services</a>
 					</div>
 				</div>
 			</div>
@@ -398,7 +398,7 @@
 							<p>Tailor-made websites focused on UX/UI,
 								 responsive design, and SEO optimization.</p>
 							<div class="service-button">
-								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>			
 					</div>
@@ -413,7 +413,7 @@
 							<p>Cloud migration, customized architectures, 
 								and continuous management on platforms like AWS, Azure, and Google Cloud</p>
 							<div class="service-button">
-								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -428,7 +428,7 @@
 							<p>Technology advisory, code auditing, and 
 								implementation of agile methodologies and DevOps</p>
 							<div class="service-button">
-								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -445,7 +445,7 @@
 							<p>End-to-end consulting and custom technological development,
 								 integrating cloud, web, and applications</p>
 							<div class="service-button">
-								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>			
 					</div>
@@ -461,7 +461,7 @@
 								external service integration.
 							</p>
 							<div class="service-button">
-								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -476,7 +476,7 @@
 							<p>Agile frameworks implementation (SAFe, Scrum, Kanban),
 								 agile coaching, and IT project management.</p>
 							<div class="service-button">
-								<a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -618,7 +618,7 @@
 						</div>
 					</div>
 					<div class="choose-us-button">
-						<a href="#">Get In Toutch</a>
+						<a href="contact-us.html">Get In Toutch</a>
 					</div>
 				</div>
 			</div>
@@ -926,7 +926,7 @@
 						</div>
 					</div>
 					<div class="about-us-button">
-						<a href="#">Get In Toutch</a>
+						<a href="contact-us.html">Get In Toutch</a>
 					</div>
 				</div>
 				<div class="col-lg-6">
