--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="services.html">Services <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
-									<li><a href="services.html">Services</a></li>
+									<!--<li><a href="services.html">Services</a></li>-->
 									<li><a href="services-details.html">Services Details</a></li>
 								</ul>
 							</li>
@@ -308,7 +308,7 @@
 						-->
 					</div>
 					<div class="about-us-button">
-						<a href="#">Get In Toutch</a>
+						<a href="contact-us.html">Get In Toutch</a>
 					</div>
 				</div>
 				<div class="col-lg-6">
