--- a/services-details.html
+++ b/services-details.html
@@ -114,15 +114,15 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="services.html">Services <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
-									<li><a href="services.html">Services</a></li>
+									<!--<li><a href="services.html">Services</a></li>-->
 									<li><a href="services-details.html">Services Details</a></li>
 								</ul>
 							</li>
-							<li><a href="portfolio.html">Portfolio <span><i class="fas fa-plus"></i></span></a>
+							<!--<li><a href="portfolio.html">Portfolio <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="portfolio.html">Portfolio</a></li>
 									<li><a href="portfolio-details.html">Portfolio Details</a></li>
-								</ul>
+								</ul>-->
 							</li>
 							<li><a href="blog.html">Blog <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
@@ -132,7 +132,7 @@
 									<li><a href="blog-details.html">Blog Details</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html">Pages <span><i class="fas fa-plus"></i></span></a>
+							<!--<li><a href="index.html">Pages <span><i class="fas fa-plus"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="about.html">About</a></li>
 									<li><a href="services.html">Services</a></li>
@@ -143,7 +143,7 @@
 									<li><a href="pricing.html">pricing</a></li>
 									<li><a href="contact-us.html">Contace Us</a></li>
 								</ul>
-							</li>
+							</li>-->
 							<li><a href="contact-us.html">Contact Us</a></li>
 						</ul>
 						<!-- headerm search button -->
