--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 							<div class="col-lg-7">
 								<div class="hero-content">
 									<h5>IT SOLUTIONS</h5>
-									<h1 data-translate="solution">We offer innovative tech solutions</h1>
+									<h1 data-translate="solutions">We offer innovative tech solutions</h1>
 									<h1 data-translate="business">To help your business reach the next <span data-translate="level"> Level </span></h1>
 									<p data-translate="consulting">From web development to cloud consulting, 
 										we’re here to optimize your performance and reduce costs </p>
@@ -355,7 +355,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h5 data-translate="historyand">History and Values</h5>
-						<h1>About Us</h1>
+						<h1 data-translate="about">About Us</h1>
 						<p data-translate="fundation">Founded in 2018, BeInCloud was born with the goal of leading technological innovation. Our mission is to offer customized tech solutions that maximize efficiency and reduce costs.</p>
 					</div>
 					<div class="row">
@@ -365,9 +365,9 @@
 									<i class="bi bi-controller"></i>
 								</div>-->
 								<div class="info-content">
-									<h4>Tailored Solutions</h4>
-									<p>We offer customized technological solutions
-										 that address your specific challenges and goals</p>
+									<h4 data-translate="tailored">Tailored Solutions</h4>
+									<p data-translate="customized">We offer customized technological solutions
+										 that address your specific challenges and goals.</p>
 								</div>
 							</div>
 						</div>
@@ -377,8 +377,8 @@
 									<i class="bi bi-controller"></i>
 								</div>-->
 								<div class="info-content">
-									<h4>Commitment to Innovation</h4>
-									<p>We stay ahead of the curve by constantly 
+									<h4 data-translate="commitment">Commitment to Innovation</h4>
+									<p data-translate="exploring">We stay ahead of the curve by constantly 
 										exploring and integrating the latest technologies.</p>
 								</div>
 							</div>
@@ -408,14 +408,14 @@
 			<div class="row align-items-center" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-8">
 					<div class="section-title">
-						<h5>OUR SERVICES</h5>
-						<h1>We Offer all Types of IT</h1>
-						<h1>Solution <span>Services</span></h1>
+						<h5 data-translate="ourservice">OUR SERVICES</h5>
+						<h1 data-translate="weoffer">We Offer all Types of IT</h1>
+						<h1 data-translate="solution">Solution <span>Services</span></h1>
 					</div>
 				</div>
 				<div class="col-lg-4">
 					<div class="services-button">
-						<a href="services.html">View All Services</a>
+						<a href="services.html" data-translate="allservice">View All Services</a>
 					</div>
 				</div>
 			</div>
@@ -426,11 +426,11 @@
 							<img src="assets/images/resource/service-icon.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Custom Web Development</h4>
-							<p>Tailor-made websites focused on UX/UI,
+							<h4 data-translate="customweb">Custom Web Development</h4>
+							<p data-translate="tailormade">Tailor-made websites focused on UX/UI,
 								 responsive design, and SEO optimization.</p>
 							<div class="service-button">
-								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>			
 					</div>
@@ -441,11 +441,11 @@
 							<img src="assets/images/resource/service-icon1.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Cloud Services Consultancy</h4>
-							<p>Cloud migration, customized architectures, 
+							<h4 data-translate="clouservices">Cloud Services Consultancy</h4>
+							<p data-translate="cloudmigration">Cloud migration, customized architectures, 
 								and continuous management on platforms like AWS, Azure, and Google Cloud</p>
 							<div class="service-button">
-								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -456,11 +456,11 @@
 							<img src="assets/images/resource/service-icon2.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Development Consultancy</h4>
-							<p>Technology advisory, code auditing, and 
+							<h4 data-translate="developmentconsultancy">Development Consultancy</h4>
+							<p data-translate="technologyadvisor">Technology advisory, code auditing, and 
 								implementation of agile methodologies and DevOps</p>
 							<div class="service-button">
-								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -473,11 +473,11 @@
 							<img src="assets/images/resource/counter-icon2.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Comprehensive Solutions</h4>
-							<p>End-to-end consulting and custom technological development,
+							<h4 data-translate="comprehensivesolutions">Comprehensive Solutions</h4>
+							<p data-translate="endtoend">End-to-end consulting and custom technological development,
 								 integrating cloud, web, and applications</p>
 							<div class="service-button">
-								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>			
 					</div>
@@ -488,12 +488,12 @@
 							<img src="assets/images/resource/counter-icon.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Web Application Development</h4>
-							<p>Scalable full-stack applications with API and 
+							<h4 data-translate="webapplication">Web Application Development</h4>
+							<p data-translate="scalablefullstack">Scalable full-stack applications with API and 
 								external service integration.
 							</p>
 							<div class="service-button">
-								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -504,11 +504,11 @@
 							<img src="assets/images/resource/counter-icon3.png" alt="icon">
 						</div>
 						<div class="service-content">
-							<h4>Scaled Agility and Project Management</h4>
-							<p>Agile frameworks implementation (SAFe, Scrum, Kanban),
+							<h4 data-translate="scaledagility">Scaled Agility and Project Management</h4>
+							<p data-translate="agileframeworks">Agile frameworks implementation (SAFe, Scrum, Kanban),
 								 agile coaching, and IT project management.</p>
 							<div class="service-button">
-								<a href="services-details.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="services-details.html" data-translate="readmore">Read More <i class="bi bi-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
@@ -531,7 +531,7 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-12 text-center">
 					<div class="section-title center-title">
-						<h2>Some of Our Clients</h2>
+						<h2 data-translate="someofourclients">Some of Our Clients</h2>
 					</div>
 				</div>
 			</div>
@@ -597,9 +597,9 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="section-title">
-						<h5>WHY CHOOSE US</h5>
-						<h1>Why Clients Choose Us</h1>
-						<p>We are a company of creative technologists, specialized in innovation and digital transformation, with a focus on personalized solutions and professional services.</p>
+						<h5 data-translate="whychoose">WHY CHOOSE US</h5>
+						<h1 data-translate="whyclients">Why Clients Choose Us</h1>
+						<p data-translate="weareacompany">We are a company of creative technologists, specialized in innovation and digital transformation, with a focus on personalized solutions and professional services.</p>
 					</div>
 					<div class="row">
 						<div class="col-lg-6">
@@ -608,8 +608,8 @@
 									<i class="bi bi-controller"></i>
 								</div>
 								<div class="info-content">
-									<h4>Tailored Solutions</h4>
-									<p>We offer customized technological solutions that address your specific challenges and goals</p>
+									<h4 data-translate="tailoredsolutions">Tailored Solutions</h4>
+									<p data-translate="weoffercustomized">We offer customized technological solutions that address your specific challenges and goals</p>
 								</div>
 							</div>
 						</div>
@@ -619,8 +619,8 @@
 									<i class="fas fa-medal"></i>
 								</div>
 								<div class="info-content">
-									<h4>Commitment to Innovation</h4>
-									<p>We stay ahead of the curve by constantly exploring and integrating the latest technologies.</p>
+									<h4 data-translate="commitmenttoinnovation">Commitment to Innovation</h4>
+									<p data-translate="westayahead">We stay ahead of the curve by constantly exploring and integrating the latest technologies.</p>
 								</div>
 							</div>
 						</div>
@@ -630,8 +630,8 @@
 									<i class="bi bi-gear"></i>
 								</div>
 								<div class="info-content">
-									<h4>Agility and Flexibility</h4>
-									<p>Our agile approach allows us to deliver high-quality results, fostering collaboration, productivity, and continuous improvement</p>
+									<h4 data-translate="agilityandflexibility">Agility and Flexibility</h4>
+									<p data-translate="ouragileapproach">Our agile approach allows us to deliver high-quality results, fostering collaboration, productivity, and continuous improvement</p>
 								</div>
 							</div>
 						</div>
@@ -641,8 +641,8 @@
 									<i class="bi bi-bar-chart"></i>
 								</div>
 								<div class="info-content">
-									<h4>Cost Efficiency</h4>
-									<p>Progressively foster systems
+									<h4 data-translate="costefficiency">Cost Efficiency</h4>
+									<p data-translate="progressively">Progressively foster systems
 										whereas equity the nvested
 										virtual networks.</p>
 								</div>
@@ -650,7 +650,7 @@
 						</div>
 					</div>
 					<div class="choose-us-button">
-						<a href="contact-us.html">Get In Toutch</a>
+						<a href="contact-us.html" data-translate="getintoutch">Get In Toutch</a>
 					</div>
 				</div>
 			</div>
@@ -800,7 +800,7 @@
 			<div class="row" data-cues="slideInUp" data-duration="2000">
 				<div class="col-lg-12 text-center">
 					<div class="section-title center-title">
-						<h2>Some of Our Partners</h2>
+						<h2 data-translate="someofourpartners">Some of Our Partners</h2>
 					</div>
 				</div>
 			</div>
